language/move-lang/tests/move_check/translated_ir_tests/move/commands/break_outside_loop_in_if.exp
error[E04014]: invalid loop control
  ┌─ tests/move_check/translated_ir_tests/move/commands/break_outside_loop_in_if.move:3:15
  │
3 │     if (true) break
  │               ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body

